Fix list item display on small devices

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -64,34 +64,3 @@ a:hover {
     @extend %tag-shared;
     font-size: 12px;
 }
-
-.list-item {
-    margin-bottom: 30px;
-    h2 {
-        margin-bottom: 5px;
-        a {
-            font-size: 26px;
-            color: $primary-color;
-            text-decoration: none;
-        }
-        a:link {
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-            background-color: transparent;
-        }
-        svg {
-            fill: $text-primary-light-color;
-            height: 20px;
-            width: 20px;
-        }
-    }
-    p {
-        margin-left: 26px;
-        margin-bottom: 10px;
-    }
-    .skills {
-        margin-left: 25px;
-    }
-}
